--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>I'm currently studying towards a BSc in Computer Science and Informatics with a focus on Artificial Intelligence at the University of Johannesburg. My primary interest lies in creating intelligent agents and working on automation systems, which are integral to the development of robotics. I am passionate about using technology to solve real-world problems and am constantly learning and exploring new advancements in AI and robotics.</p>
             </div>
             <div class="about-image">
-                <img src="assets/images/images/img_01.jpg" alt="Tshephang Matlala">
+                <img src="assets/images/img_01.jpg" alt="Tshephang Matlala">
             </div>            
         </section>
 
