--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,19 @@
     <p>This project uses linear regression to predict car prices based on various factors. It demonstrates the application of machine learning models in price estimation.</p>
     <p><strong>Language:</strong> Java</p>
     <a href="https://github.com/mat-tp/linear-regression-car-pred" target="_blank">View Project on GitHub</a>
-    
-    <!-- Project 3: Vacuum Cleaner Agent Simulation -->
-    <h2>Project 3: Vacuum Cleaner Agent Simulation</h2>
-    <p>An AI search-based agent that uses the A* algorithm to navigate and clean an environment efficiently. It demonstrates search algorithms and intelligent decision-making.</p>
-    <p><strong>Language:</strong> Java</p>
-    <!-- <a href="https://github.com/mat-tp/agent-simulation" target="_blank">View Project on GitHub</a> -->
 
+    <!--Project 3: AI search algo Agent ( Java Implemented and React implemented-->
+  <h2>Vacuum Cleaner Agent & Pathfinding Visualizer</h2>
+    <p>Developed a dual-version project showcasing AI pathfinding and search algorithms. The core logic, implemented in Java, simulates a vacuum cleaner agent efficiently navigating and cleaning a 2D environment using the A* algorithm and Variable Cell Automata (VCA) for intelligent decision-making.  This project demonstrates the practical application of graph theory principles in a grid-based system.</p>
+    <p><strong>Language and Technology:</strong> Java, React, TypeScript,Html and css</p>
+
+    <p><strong>Explore the Code (Java Implemented) [The main projec]:</strong></p>
+    <a href="https://github.com/mat-tp/PathSearchAgent-VCA" target="_blank">View Project on GitHub</a>
+
+    <h4>Interactive Pathfinding Visualizer (React/TypeScript - Enhanced Visuals) Modified Version:</h4>
+    <p>Experience an enhanced, web-based visualizer built with React and TypeScript. This version provides an interactive interface to explore pathfinding algorithms on a 2D grid, where each cell is interconnected, forming a graph. Witness the A* algorithm and other search methods in action with improved visual clarity and user interaction.</p>
+    <a href="https://sparkling-treacle-072724.netlify.app/" target="_blank">Pathfinding </a>
+        
     <!-- Project 4: ttg() -->
     <h2>Project 4: Time Traveler's Guestbook</h2>
         <p>Embark on a journey through time with the Time Traveler's Guestbook! This unique web application allows you to leave your mark across the temporal plane, registering your presence in the timestream and viewing fellow time travelers who have passed through.  Witness the current temporal coordinates on a mesmerizing clock and even earn temporal ranks as you make multiple journeys through time.  Built with Python, Flask, and other web technologies, the guestbook offers a sleek, modern interface with responsive design, ensuring compatibility across various devices. Explore the past, present, and future – all in one place!</p>
