--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <a href="https://github.com/mat-tp/linear-regression-car-pred" target="_blank">View Project on GitHub</a>
 
     <!--Project 3: AI search algo Agent ( Java Implemented and React implemented-->
-  <h2>Vacuum Cleaner Agent & Pathfinding Visualizer</h2>
+  <h2>Path Search Agent (VCA) & Pathfinding Visualizer</h2>
     <p>Developed a dual-version project showcasing AI pathfinding and search algorithms. The core logic, implemented in Java, simulates a vacuum cleaner agent efficiently navigating and cleaning a 2D environment using the A* algorithm and Variable Cell Automata (VCA) for intelligent decision-making.  This project demonstrates the practical application of graph theory principles in a grid-based system.</p>
     <p><strong>Language and Technology:</strong> Java, React, TypeScript,Html and css</p>
 
